lnrpc: surface blinding point and encrypted data in hops
